<resources>
    <string name="reserve_app_name">座位预订</string>
    <string name="reserve_location_icon_dec">地点</string>
    <string name="reserve_person_count_icon_desc">人数</string>
    <string name="reserve_collect_icon_desc">收藏图标</string>
    <string name="reserve_empty_view_label">当前数据为空</string>
    <string name="reserve_load_view_label">加载中</string>
    <string name="reserve_city_query_hint">请输入地区或城市</string>
    <string name="reserve_city_default_location">当前定位</string>
    <string name="reserve_city_location_history">选择历史</string>
    <string name="reserve_tool_bar_array_down_desc">下箭头</string>
    <string name="reserve_organization_image_desc">机构图片</string>
    <string name="reserve_room_image_desc">房间图片</string>
    <string name="reserve_menu_search_label">搜索</string>
    <string name="reserve_menu_sort_label">排序</string>
    <string name="reserve_menu_plan_label">平面图</string>
    <string name="reserve_menu_sort_by_name_label">名称</string>
    <string name="reserve_menu_sort_by_seat_label">空位</string>
    <string name="reserve_menu_sort_reverse_label">逆序</string>
    <string name="reserve_organization_transition_name">organization_transition_name</string>
    <string name="reserve_room_transition_name">room_transition_name</string>
    <string name="reserve_henu_lib_des">
        <![CDATA[
            <p >
                河南大学图书馆是<b>第一批全国古籍重点保护单位</b>创建于1912年，时为河南留学欧美预备学校图书室。
            </p>
            <p>
                之后随着学校的发展壮大。
                河南大学图书馆伴随着学校的发展壮大，已经走过了近百年的风雨历程，建国前的38年，历经战乱磨难、步履维艰，直到建国初期，藏书仅15万余册。
                建国后的半个世纪，特别是改革开放以来，随着党和国家对高等教育的重视，图书馆也遇到了发展的大好时机。在学校领导的关心和支持下，经过图书馆人的不懈努力，图书馆发生了巨大的变化。
                图书馆文献资源总量：411万册。图书馆现设有读者服务窗口43个，其中各类阅览室、书库34余个，阅览座位6647席。
            </p>
        ]]>
    </string>
    <string name="reserve_expandable_img_btn_desc">可伸缩TextView ImageButton描述</string>

    <string name="reserve_menu_filter_label">筛选</string>
    <string name="reserve_menu_seat_busy_label">繁忙</string>
    <string name="reserve_menu_seat_empty_label">空闲</string>
    <string name="reserve_menu_seat_none_label">全部</string>
    <string name="reserve_select_seat_btn">预订</string>
    <string name="reserve_select_btn">确认</string>
    <string name="reserve_select_cal">取消</string>
    <string name="reserve_room_seat_msg_label">座位留言：</string>
    <string name="reserve_room_seat_desc_label">座位描述：</string>
    <string name="reserve_room_seat_status_label">座位状态：</string>
    <string name="reserve_room_seat_name_label">座位名称：</string>
</resources>