<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_room_seat_name_label" />

        <TextView
            android:id="@+id/seat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="B-19" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_room_seat_status_label" />

        <TextView
            android:id="@+id/seat_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="空闲" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_room_seat_desc_label" />

        <TextView
            android:id="@+id/seat_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="正常" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_room_seat_msg_label" />

        <TextView
            android:id="@+id/seat_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/reserveLightGray"
            android:padding="10dp"
            tools:text="天生我材必有用，千金散尽还复来。" />
    </LinearLayout>


</LinearLayout>